# ComfyUI-Drawer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  GADGET_API.md  LICENSE  README.md  README_ja.md  README_zh.md  TODO.md  __init__.py  dict_store.py  drawer_nodes.py  drawer_routes.py  fs_utils.py  image_safety.py  media_metadata.py  metadata_ext.py  nodes_switch.py  prompt_processor.py  pyproject.toml  request_guards.py  requirements.txt  search_index.py  search_query.py  settings.py  thumbnails.py  xyz_metadata.py
.claude/commands/: release.md
.github/workflows/: publish_action.yml
docs/: USER_GUIDE.md  USER_GUIDE_ja.md  USER_GUIDE_zh.md  gadget-template.js
example_workflows/: drawer-sample-anima-advanced.json  drawer-sample-anima.json  drawer-tutorial-deck-en.json  drawer-tutorial-deck-ja.json  drawer-tutorial-deck-zh.json
tests/: test_review_hardening.py
web/css/: context-menu.css  dialog.css  dict.css  drawer.css  image-picker.css  lightbox.css  media-card.css  settings.css
web/gadgets/deck/: deck-gadget.js  deck.css
web/gadgets/gallery/: gallery-gadget.js  gallery.css
web/gadgets/home/: home-gadget.js  home.css
web/gadgets/modelviewer/: modelviewer-gadget.js  modelviewer.css
web/gadgets/xyzplot/: xyzplot-gadget.js  xyzplot.css
web/js/: comfy-drawer.js  utils.js  version.js
web/js/components/: media-card.js
web/js/core/: api-utils.js  comfy-bridge.js  drawer-shell.js  gadget-base.js  message-bus.js
web/js/services/: context-menu.js  dialog.js  dict-service.js  image-picker.js  toast.js  (+6 more)
web/locales/: en.json  ja.json  zh.json
(+2 files in other folders)
