[project]
name = "comfy-drawer"
version = "1.0.7"
description = "A mobile-friendly drawer-style gadget platform for ComfyUI with Deck, Gallery, Model Viewer, XYZ Plot, and utility nodes."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/Kuroi961/ComfyUI-Drawer"
Documentation = "https://github.com/Kuroi961/ComfyUI-Drawer#readme"
"Bug Tracker" = "https://github.com/Kuroi961/ComfyUI-Drawer/issues"

[tool.comfy]
PublisherId = "kuroi961"
DisplayName = "ComfyUI-Drawer"
Icon = "https://raw.githubusercontent.com/Kuroi961/ComfyUI-Drawer/master/docs/icon.jpg"
